# rust_rocket

./: Cargo.toml
migrations/2020-11-26-080826_todo_item/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs  todoitem_routes.rs  todolist_routes.rs
