[package]
authors = ["Dominik Facko <dominik.facko@barrage.net>"]
edition = "2018"
name = "rocket_todo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
diesel = {version = "1.4.5", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
rocket = "0.4.6"
rocket_codegen = "0.4.6"
rocket_contrib = "0.4.6"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
